manifest/ingress-nginx.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ingress-nginx
