manifest/ingress-traefik-v2.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ingress-traefik-v2
