manifest/synology-csi-talos.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: synology-csi
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
