manifest/traefik-v2.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: traefik-v2
