manifest/longhorn-system.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: longhorn-system
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui-http
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "50"
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - turing-kube-longhorn.<path:stringreplacesecret#domain>
  rules:
    - host: turing-kube-longhorn.<path:stringreplacesecret#domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  name: http
