manifest/tcpm.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: tcpm
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcpm-http
  namespace: tcpm
  annotations:
    argocd.argoproj.io/sync-wave: "50"
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tcpm.<path:stringreplacesecret#domain>
  rules:
    - host: tcpm.<path:stringreplacesecret#domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tcpm
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcpm-tailscale
  namespace: tcpm
  annotations:
    argocd.argoproj.io/sync-wave: "50"
    external-dns.alpha.kubernetes.io/controller: none
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - tcpm
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: tcpm
                port:
                  name: http
